--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,202 +1,351 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
-
-*{
-   font-family: 'Nunito', sans-serif;
-   margin:0; padding:0;
-   box-sizing: border-box;
-   outline: none; border:none;
-   text-decoration: none;
-   transition: all .2s linear;
-   text-transform: capitalize;
+html {
+    height: 100%;
+    width: 100%;
+    scroll-behavior: smooth;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+  }
+  
+  body {
+    background: #000000;
+    color: #fff;
+  }
+  
+  #header {
+    width: 100%;
+    height: 100vh;
+    background-image: url(assets/images/Avatar.png);
+    background-size: cover;
+    background-position: center;
 }
+  
+  .container {
+    padding: 10px 10%;
+  }
+  
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .logo {
+    width: 140px;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+  }
+  
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+  }
+  
+  nav ul li a::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #23a7ff;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+  }
+  
+  nav ul li a:hover::after {
+    width: 100%;
+  }
+  
+  .header-text {
+    margin-top: 20%;
+    font-size: 30px;
+    text-align: center;
+  }
+  
+  .header-text h1 {
+    color: #23a7ff;
+    font-size: 60px;
+    margin-top: 20px;
+  }
+  
 
-html, body{
-   font-size: 62.5%;
-   overflow-x: hidden;
-   background-image: linear-gradient(120deg, #fdb5d1 0%, #fffeae 100%);
-}
-
-.container{
-   max-width: 1200px;
-   margin:0 auto;
-   padding:3rem 2rem;
-}
-
-.container .title{
-   font-size: 3.5rem;
-   color:#444;
-   margin-bottom: 3rem;
-   text-transform: uppercase;
-   text-align: center;
-}
-
-.container .products-container{
-   display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-   gap:2rem;
-}
-
-.container .products-container .product{
-   text-align: center;
-   padding:3rem 2rem;
-   background: #fff;
-   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-   outline: .1rem solid #ccc;
-   outline-offset: -1.5rem;
-   cursor: pointer;
-}
-
-.container .products-container .product:hover{
-   outline: .2rem solid #222;
-   outline-offset: 0;
-}
-
-.container .products-container .product img{
-   height: 25rem;
-}
-
-.container .products-container .product:hover img{
-   transform: scale(.9);
-}
-
-.container .products-container .product h3{
-   padding:.5rem 0;
-   font-size: 2rem;
-   color:#444;
-}
-
-.container .products-container .product:hover h3{
-   color:#ffa0b0;
-}
-
-.container .products-container .product .price{
-   font-size: 2rem;
-   color:#444;
-}
-
-.products-preview{
-   position: fixed;
-   top:0; left:0;
-   min-height: 100vh;
-   width: 100%;
-   background: rgba(0,0,0,.8);
-   display: none;
-   align-items: center;
-   justify-content: center;
-}
-
-.products-preview .preview{
-   display: none;
-   padding:2rem;
-   text-align: center;
-   background: #fff;
-   position: relative;
-   margin:2rem;
-   width: 40rem;
-}
-
-.products-preview .preview.active{
-   display: inline-block;
-}
-
-.products-preview .preview img{
-   height: 30rem;
-}
-
-.products-preview .preview .fa-times{
-   position: absolute;
-   top:1rem; right:1.5rem;
-   cursor: pointer;
-   color:#444;
-   font-size: 4rem;
-}
-
-.products-preview .preview .fa-times:hover{
-   transform: rotate(90deg);
-}
-
-.products-preview .preview h3{
-   color:#444;
-   padding:.5rem 0;
-   font-size: 2.5rem;
-}
-
-.products-preview .preview .stars{
-   padding:1rem 0;
-   font-size: 1.7rem;
-}
-
-.products-preview .preview .stars i{
-   color:#ffa0b0;
-}
-
-.products-preview .preview .stars span{
-   color:#999;
-}
-
-.products-preview .preview p{
-   line-height: 1.5;
-   padding:1rem 0;
-   font-size: 1.6rem;
-   color:#777;
-}
-
-.products-preview .preview .price{
-   padding:1rem 0;
-   font-size: 2.5rem;
-   color:#ffa0b0;
-}
-
-.products-preview .preview .buttons{
-   display: flex;
-   gap:1.5rem;
-   flex-wrap: wrap;
-   margin-top: 1rem;
-}
-
-.products-preview .preview .buttons a{
-   flex:1 1 16rem;
-   padding:1rem;
-   font-size: 1.8rem;
-   color:#444;
-   border:.1rem solid #444;
-}
-
-.products-preview .preview .buttons a.cart{
-   background: #444;
-   color:#fff;
-}
-
-.products-preview .preview .buttons a.cart:hover{
-   background: #111;
-}
-
-.products-preview .preview .buttons a.buy:hover{
-   background: #444;
-   color:#fff;
-}
-
-
-@media (max-width:991px){
-
-   html{
-      font-size: 55%;
-   }
-
-}
-
-@media (max-width:768px){
-
-   .products-preview .preview img{
-      height: 25rem;
-   }
-
-}
-
-@media (max-width:450px){
-
-   html{
-      font-size: 50%;
-   }
-
-}
+  
+  /*-- -----------------------------My projects------------------------- */
+  
+  #projects {
+    padding: 50px 0;
+  }
+  
+  .project-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+  }
+  
+  .projects {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .projects img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+  }
+  
+  .layer {
+    width: 100%;
+    height: 0%;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), #23a7ff);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+  }
+  
+  .layer h3 {
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+  
+  .layer a {
+    margin-top: 20px;
+    color: #23a7ff;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+  }
+  
+  .projects:hover img {
+    transform: scale(1.1);
+  }
+  
+  .projects:hover .layer {
+    height: 100%;
+  }
+  
+  .btn {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #23a7ff;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+  
+  }
+  
+  /*-- -----------------------------contact------------------------- */
+  .contact-left {
+    flex-basis: 35%;
+  }
+  
+  .contact-right {
+    flex-basis: 60%;
+  }
+  
+  .contact-left p {
+    margin-top: 30px;
+  }
+  
+  .contact-left p i {
+    color: #23a7ff;
+    margin-right: 15px;
+    font-size: 25px;
+  }
+  
+  .social-icons {
+    margin-top: 30px;
+  }
+  
+  .social-icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+  }
+  
+  .social-icons a:hover {
+    color: #23a7ff;
+    transform: translateY(-5px);
+  }
+  
+  .btn.btn2 {
+    display: inline-block;
+    background: #23a7ff;
+  }
+  
+  .contact-right form {
+    width: 100%;
+  
+  }
+  
+  form input,
+  form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+  }
+  
+  form .btn2 {
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+  }
+  
+  /*-- -----------------------------css for small screens------------------------- */
+  nav .fas {
+    display: none;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    #header {
+      background-image: url(assets/images/Avatar.png);
+    }
+  
+    .header-text {
+      margin-top: 100%;
+      font-size: 16px;
+    }
+  
+    .header-text h1 {
+      font-size: 30px;
+    }
+  
+    nav .fas {
+      display: block;
+      font-size: 30px;
+      position: relative;
+      top: 13px;
+    }
+  
+    nav ul {
+      background: #23a7ff;
+      position: fixed;
+      top: 0;
+      right: -200px;
+      width: 200px;
+      height: 100%;
+      padding-top: 50px;
+      z-index: 2;
+      transition: right 0.5s;
+    }
+  
+    nav ul li {
+      display: block;
+      margin: 25px;
+    }
+  
+    nav ul .fas {
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      cursor: pointer;
+    }
+  
+    .sub-title {
+      font-size: 40px;
+    }
+  
+    .about-col-1,
+    .about-col-2 {
+      flex-basis: 100%;
+    }
+  
+    .about-col-1 {
+      margin-bottom: 30px;
+    }
+  
+    .about-col-2 {
+      font-size: 14px;
+    }
+  
+    .tab-links {
+      font-size: 16px;
+      margin-right: 20px;
+    }
+  
+    .contact-left,
+    .contact-right {
+      flex-basis: 100%;
+    }
+  
+    .languages-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-gap: 40px;
+      margin-top: 50px;
+    }
+  
+    nav ul li a::after {
+      content: '';
+      width: 0;
+      height: 3px;
+      background: #262626;
+      position: absolute;
+      left: 0;
+      bottom: -6px;
+      transition: 0.5s;
+    }
+  
+    nav ul li a:hover::after {
+      width: 100%;
+    }
+  
+    .tab-contents ul li {
+      list-style: none;
+      margin: 10px 0;
+      font-size: 12px;
+    }
+  
+    .tab-contents ul li span {
+      color: #23a7ff;
+      font-size: 14px;
+    }
+  
+    .tab-links {
+      margin-right: 50px;
+      font-size: 18px;
+      font-weight: 500;
+      cursor: pointer;
+      position: relative;
+    }
+  }
